<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/album_detail_performers_tab"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/performer_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/performer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
