<resources>
    <string name="app_name">MISW4203Grupo14</string>
    <string name="albums_menu_title">Albumes</string>
    <string name="collectors_menu_title">Coleccionistas</string>
    <string name="performer_menu_title">Artistas</string>
    <string name="user_selection_menu_title">Usuario</string>
    <string name="toolbar_search_text">Buscar</string>
    <string name="album_detail_general_tab">General</string>
    <string name="performer_detail_title">Artista</string>
    <string name="album_detail_comments_tab">Comentarios</string>
    <string name="album_detail_general_genre">Género</string>
...
