<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="collector"
            type="co.edu.uniandes.miso.vinilos.model.domain.DetailCollector" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/collector_photo"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/collector_icon"
                app:tint="@color/iconTint" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{collector.name}"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp"
                app:underlinedText="@{collector.email}" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{collector.phone}"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/performersSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/collector_detail_performers_title"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/performersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clipToPadding="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/performer_carousel_item" />
            </FrameLayout>

            <TextView
                android:id="@+id/collectionSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/collector_detail_collection_title"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/albumsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clipToPadding="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/album_carousel_item" />
            </FrameLayout>

            <ProgressBar
                android:id="@+id/collectorDetailProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</layout>

